[package]
name = "orbital_pulse"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbital_pulse"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# Используем версии, которые совместимы с твоими откатами в YAML
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.18"
# Принудительно ограничиваем версии проблемных пакетов здесь
toml_edit = "0.21.0"
proc-macro-crate = "3.1.0"
ahash = "0.8.6"
