[package]
name = "orbital-pulse"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbital_pulse"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Force old versions without edition2024
[dependencies.blake3]
version = "=1.5.1"

[dependencies.ahash]
version = "=0.8.6"
